--- a/public/map.html
+++ b/public/map.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrWOit0v-QYF9j_8TSM7S6wyLCyAZalJI&callback=initMap">
+    </script>
+    
     <title>Document</title>
 </head>
 <body>
@@ -32,9 +36,8 @@
         </div>
       </nav>
 
-      <div class="map">
-
-      </div>
+    <div id="map"></div>
 
 </body>
+
 </html>
