fixedd some routing stuff

--- a/public/members.html
+++ b/public/members.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">App Title</a>
+        <a class="navbar-brand" href="/">App Title</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
 
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">logout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
             </li>
 
           </ul>
@@ -34,11 +34,27 @@
 
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <h2>Welcome <span class="member-name"></span></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <h5>User Options</h5>
+            <ul>
+              <p>Username</p>
+              <p>Profile Pic</p>
+              <p>Inventory</p>
+              <p>StoreFront</p>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-  <div class="map">
 
-
-  </div>
+  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
