--- a/public/map.html
+++ b/public/map.html
@@ -23,7 +23,7 @@
 
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Sign in <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./login" id="user-button">Sign in <span class="sr-only">(current)</span></a>
             </li>
 
           </ul>
