--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <title>Document</title>
+    <title>Whereswares</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">App Title</a>
+        <a class="navbar-brand" href="../public/index.html">Whereswares</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,7 +19,7 @@
 
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Sign in <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../public/login.html">Sign in <span class="sr-only">(current)</span></a>
             </li>
 
           </ul>
