--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="./login.html">Sign in <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./signup.html" id="sign-in">Sign in <span class="sr-only">(current)</span></a>
             </li>
 
           </ul>
