--- a/public/map.html
+++ b/public/map.html
@@ -28,7 +28,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">User Info <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/members">User Info <span class="sr-only">(current)</span></a>
         </li>
 
       </ul>
