--- a/public/map.html
+++ b/public/map.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="./map.html">App Title</a>
+    <a class="navbar-brand" href="./map.html">Vændio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/members">User Info <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">User Info <span class="sr-only">(current)</span></a>
         </li>
 
       </ul>
