--- a/public/map.html
+++ b/public/map.html
@@ -41,6 +41,48 @@
     </div>
   </nav>
 
+  <div id="overlay">
+    <div id="container" class="overlayBody">
+      <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-outline-danger">x</button>
+      <Table class="table" striped bordered hover size="sm">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Item</th>
+            <th>Price</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Onions</td>
+            <td>$3/onion</td>
+            <td>
+              <button type="button" class="btn btn-outline-success">Add to order</button>
+            </td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Carrots</td>
+            <td>$3/carrot</td>
+            <td>
+              <button type="button" class="btn btn-outline-success">Add to order</button>
+            </td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Potatoes</td>
+            <td>$3/potatoes</td>
+            <td>
+              <button type="button" class="btn btn-outline-success">Add to order</button>
+            </td>
+          </tr>
+        </tbody>
+      </Table>
+    </div>
+  </div>
+
   <div id="map"></div>
 
 
