--- a/public/map.html
+++ b/public/map.html
@@ -13,12 +13,12 @@
     </script>
   <script type="text/javascript" src="js/map.js"></script>
 
-  <title>Document</title>
+  <title>Vaendio</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="./map.html">Vændio</a>
+    <a class="navbar-brand" href="./map.html">Vaendio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
