--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Vaendio Members</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  
+
 </head>
 
 <body>
@@ -27,7 +27,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
         </li>
-
+        <li class="nav-item active">
+          <a class="nav-link" href="/chat.html">Live Chat<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
 
       <form class="form-inline my-2 my-lg-0">
@@ -70,7 +72,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 
 
