--- a/public/login.html
+++ b/public/login.html
@@ -48,7 +48,7 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn btn-default">Login</button>
+          <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
         </form>
         <br />
         <p>Or sign up <a href="/signup">here</a></p>
