--- a/public/map.html
+++ b/public/map.html
@@ -44,6 +44,7 @@
   <div id="overlay">
     <div id="container" class="overlayBody">
       <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-outline-danger">x</button>
+      <h1>Bobby's Store</h1>
       <Table class="table" striped bordered hover size="sm">
         <thead>
           <tr>
@@ -85,7 +86,9 @@
 
   <div id="map"></div>
 
-
+  <div id="footer">
+    Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+  </div>
 </body>
 
 </html>
