--- a/public/map.html
+++ b/public/map.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="./map.html">Vaendio</a>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+    <a id="logo" class="navbar-brand" href="./map.html">Vændio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,14 +30,13 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/members">User Info <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/members">User Map <span class="sr-only">(current)</span></a>
         </li>
-
       </ul>
 
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-success" type="submit">Search</button>
       </form>
 
     </div>
@@ -45,7 +44,7 @@
 
   <div id="overlay">
     <div id="container" class="overlayBody">
-      <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-outline-danger">x</button>
+      <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-danger">x</button>
       <h1>Bobby's Store</h1>
       <Table class="table" striped bordered hover size="sm">
         <thead>
@@ -62,7 +61,7 @@
             <td>Onions</td>
             <td>$3/onion</td>
             <td>
-              <button type="button" class="btn btn-outline-success">Add to order</button>
+              <button type="button" class="btn btn-success">Add to order</button>
             </td>
           </tr>
           <tr>
@@ -70,7 +69,7 @@
             <td>Carrots</td>
             <td>$3/carrot</td>
             <td>
-              <button type="button" class="btn btn-outline-success">Add to order</button>
+              <button type="button" class="btn btn-success">Add to order</button>
             </td>
           </tr>
           <tr>
@@ -78,7 +77,7 @@
             <td>Potatoes</td>
             <td>$3/potatoes</td>
             <td>
-              <button type="button" class="btn btn-outline-success">Add to order</button>
+              <button type="button" class="btn btn-success">Add to order</button>
             </td>
           </tr>
         </tbody>
