--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-    <a class="navbar-brand" href="./map.html">Vaendio</a>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+    <a id="logo" class="navbar-brand" href="./map.html">Vaendio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
         <div class="card">
         <div class="card-body">
 
-        <h2>Login Form</h2>
+        <h2>Login</h2>
         <form class="login">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
