--- a/public/signup.html
+++ b/public/signup.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-    <a class="navbar-brand" href="./map.html">Vaendio</a>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+    <a  id="logo" class="navbar-brand" href="./map.html">Vaendio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,7 +24,7 @@
       <div class="col-lg-6">
         <div class="card">
         <div class="card-body">
-         <h2>Sign Up Form</h2>    
+         <h2>Sign Up</h2>    
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
