--- a/public/chat.html
+++ b/public/chat.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <body>
-            chat app
-            <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/chat.js"></script>
-        </body>
-    </head>
+
+<head>
+
+<body>
+    LIVE CHAT
+
+    <div id="msg"></div>
+    <form id="message-form">
+        <input name="message" placeholder="Enter Your Message">
+        <button>Send!</button>
+    </form>
+    <button id="send-location">Send location</button>
+
+    <script id="msg-tem" type="text/html">
+        <div>
+            <p>{{message}}  {{createdAt}} </p>
+        </div>
+    </script>
+    <script id="loc-msg-tem" type="text/html">
+        <div>
+            <p><a href="{{url}}" target="_blank">My current location</a></p>
+        </div>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
+</body>
+</head>
+
 </html>
