--- a/public/chat.html
+++ b/public/chat.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-
-<body>
-    LIVE CHAT
-
-    <div id="msg"></div>
-    <form id="message-form">
-        <input name="message" placeholder="Enter Your Message">
-        <button>Send!</button>
-    </form>
-    <button id="send-location">Send location</button>
-
-    <script id="msg-tem" type="text/html">
-        <div>
-            <p>{{message}}  {{createdAt}} </p>
-        </div>
-    </script>
-    <script id="loc-msg-tem" type="text/html">
-        <div>
-            <p><a href="{{url}}" target="_blank">My current location</a></p>
-        </div>
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
-</body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <title>Vaendio</title>
 </head>
 
+<body id="room">
+    <div id="navbar" class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a id="logo" class="navbar-brand" href="#">Vændio</a>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Logout</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div id="chat-room">
+        <div id="msg"></div>
+        <div id="send">
+            <form id="message-form">
+                <input name="message" placeholder="Enter Your Message">
+                <button>Send!</button>
+                <button id="send-location">Send location</button>
+            </form>
+        </div>
+        <script id="msg-tem" type="text/html">
+            <div id="user">
+                <span id="name">name{{username}}</span>
+                <p>
+                    <span id="text"> {{message}}</span>
+                    <span id="time">{{createdAt}}</span>
+                </p>
+            </div>
+        </script>
+        <script id="loc-msg-tem" type="text/html">
+        <div id="user">
+                <p id="name">name{{username}}</p>
+                <p id="local"><a href="{{url}}" target="_blank">My current location</a></p>
+        </div>
+        </script>
+    </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/chat.js"></script>
 </html>
