--- a/public/members.html
+++ b/public/members.html
@@ -18,7 +18,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrWOit0v-QYF9j_8TSM7S6wyLCyAZalJI&callback=initMap">
     </script>
   <script type="text/javascript" src="js/map.js"></script>
-  <title>Vaendio</title>
+  <title>Vændio</title>
 </head>
 
 <body>
@@ -171,7 +171,7 @@
   <div id="overlay">
     <div id="container" class="overlayBody">
       <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-danger">x</button>
-      <h1>Bobby's Store</h1>
+      <h1>Bobby's Store - 1234 Main St.</h1>
       <Table class="table" striped bordered hover size="sm">
         <thead>
           <tr>
